Side Menu gray color

--- a/46_APIWithTokenHomework/Base.lproj/Main.storyboard
+++ b/46_APIWithTokenHomework/Base.lproj/Main.storyboard
@@ -366,13 +366,13 @@
                                                         <constraint firstAttribute="height" constant="50" id="Hn4-xp-YKq"/>
                                                     </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="FirstName LastName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bVK-1v-18M">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="FirstName LastName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bVK-1v-18M">
                                                     <rect key="frame" x="66" y="8" width="526" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="07 Feb 2016" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B0M-ca-m8x">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="07 Feb 2016" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B0M-ca-m8x">
                                                     <rect key="frame" x="66" y="37" width="526" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
@@ -1151,7 +1151,7 @@
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="vdo-mc-h9k">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="menuHeaderCell" id="LPD-5e-Twn">
                                 <rect key="frame" x="0.0" y="28" width="600" height="44"/>
@@ -1182,18 +1182,28 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Group Wall" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="USz-wA-2Jd">
-                                            <rect key="frame" x="8" y="11" width="84" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <rect key="frame" x="207" y="12" width="86" height="20.5"/>
+                                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="USz-wA-2Jd" firstAttribute="leading" secondItem="3fN-tw-b53" secondAttribute="leading" constant="8" id="Knf-9H-QYT"/>
+                                        <constraint firstItem="USz-wA-2Jd" firstAttribute="centerX" secondItem="3fN-tw-b53" secondAttribute="centerX" constant="-50" id="OGk-7o-P9i"/>
                                         <constraint firstAttribute="bottom" secondItem="USz-wA-2Jd" secondAttribute="bottom" constant="11.5" id="lWg-YY-Adq"/>
                                         <constraint firstItem="USz-wA-2Jd" firstAttribute="top" secondItem="3fN-tw-b53" secondAttribute="top" constant="11" id="sJO-uz-Vaa"/>
+                                        <constraint firstItem="USz-wA-2Jd" firstAttribute="centerY" secondItem="3fN-tw-b53" secondAttribute="centerY" id="wHM-xu-3VF"/>
                                     </constraints>
+                                    <variation key="default">
+                                        <mask key="constraints">
+                                            <exclude reference="Knf-9H-QYT"/>
+                                            <exclude reference="lWg-YY-Adq"/>
+                                            <exclude reference="sJO-uz-Vaa"/>
+                                        </mask>
+                                    </variation>
                                 </tableViewCellContentView>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <segue destination="fPf-Lf-Ykt" kind="custom" identifier="showWallSegue" customClass="SWRevealViewControllerSeguePushController" id="fGH-Qz-Ixn"/>
                                 </connections>
@@ -1206,18 +1216,28 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Photo Albums" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QSt-vf-du1">
-                                            <rect key="frame" x="8" y="11" width="107" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <rect key="frame" x="195" y="12" width="110" height="20.5"/>
+                                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="QSt-vf-du1" firstAttribute="top" secondItem="qQy-wk-UZ0" secondAttribute="top" constant="11" id="Pxo-OF-XVw"/>
+                                        <constraint firstItem="QSt-vf-du1" firstAttribute="centerY" secondItem="qQy-wk-UZ0" secondAttribute="centerY" id="a6f-Oj-riu"/>
+                                        <constraint firstItem="QSt-vf-du1" firstAttribute="centerX" secondItem="qQy-wk-UZ0" secondAttribute="centerX" constant="-50" id="bBE-BM-TlO"/>
                                         <constraint firstItem="QSt-vf-du1" firstAttribute="leading" secondItem="qQy-wk-UZ0" secondAttribute="leading" constant="8" id="eHg-jK-lM4"/>
                                         <constraint firstAttribute="bottom" secondItem="QSt-vf-du1" secondAttribute="bottom" constant="11.5" id="ibt-Y1-vWf"/>
                                     </constraints>
+                                    <variation key="default">
+                                        <mask key="constraints">
+                                            <exclude reference="Pxo-OF-XVw"/>
+                                            <exclude reference="eHg-jK-lM4"/>
+                                            <exclude reference="ibt-Y1-vWf"/>
+                                        </mask>
+                                    </variation>
                                 </tableViewCellContentView>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <segue destination="RYy-yc-myO" kind="custom" identifier="showPhotoAlbumsSegue" customClass="SWRevealViewControllerSeguePushController" id="D9G-cU-yWY"/>
                                 </connections>
@@ -1230,18 +1250,28 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Video Albums" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VfZ-tJ-vUd">
-                                            <rect key="frame" x="8" y="11" width="106" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <rect key="frame" x="196" y="12" width="108.5" height="20.5"/>
+                                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="VfZ-tJ-vUd" firstAttribute="top" secondItem="BNj-ta-fzV" secondAttribute="top" constant="11" id="1eI-6k-p5h"/>
+                                        <constraint firstItem="VfZ-tJ-vUd" firstAttribute="centerX" secondItem="BNj-ta-fzV" secondAttribute="centerX" constant="-50" id="2p2-09-Xyj"/>
                                         <constraint firstAttribute="bottom" secondItem="VfZ-tJ-vUd" secondAttribute="bottom" constant="11.5" id="9v9-90-f1q"/>
+                                        <constraint firstItem="VfZ-tJ-vUd" firstAttribute="centerY" secondItem="BNj-ta-fzV" secondAttribute="centerY" id="NWz-lg-pnX"/>
                                         <constraint firstItem="VfZ-tJ-vUd" firstAttribute="leading" secondItem="BNj-ta-fzV" secondAttribute="leading" constant="8" id="mca-PB-mGs"/>
                                     </constraints>
+                                    <variation key="default">
+                                        <mask key="constraints">
+                                            <exclude reference="1eI-6k-p5h"/>
+                                            <exclude reference="9v9-90-f1q"/>
+                                            <exclude reference="mca-PB-mGs"/>
+                                        </mask>
+                                    </variation>
                                 </tableViewCellContentView>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <segue destination="BaU-XI-Bzd" kind="custom" identifier="showVideoAlbumsSegue" customClass="SWRevealViewControllerSeguePushController" id="lzr-7n-AHf"/>
                                 </connections>
@@ -2161,6 +2191,6 @@
         <image name="thumb-up_16" width="16" height="16"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Mqh-9M-QQI"/>
+        <segue reference="fGH-Qz-Ixn"/>
     </inferredMetricsTieBreakers>
 </document>
